# cookiecutter-mini-template

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
