[tool.poetry]
name = "cookiecutter-mini-template"
version = "0.0.1"
description = ""
authors = ["Waking <wakingyeung23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
commitizen = "^2.10.0"
pre-commit = "^2.9.2"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
secondary = true

[[tool.poetry.source]]
name = "163"
url = "https://mirrors.163.com/pypi/simple/"
secondary = true

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
version_files = [
  "pyproject.toml:version"
]

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "all"
enable = "C0202, E0102, E0211, E0213, E1120, E1121, E1123, R0401"

[tool.pylint.format]
max-line-length = "88"
