[tool.poetry]
name = "cookiecutter-mini-template"
version = "0.1.0"
description = ""
authors = ["Waking <wakingyeung23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
commitizen = "^2.10.0"
pre-commit = "^2.9.2"
pylint = "^2.6.0"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
secondary = true

[[tool.poetry.source]]
name = "163"
url = "https://mirrors.163.com/pypi/simple/"
secondary = true

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
secondary = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
version_files = [
  "pyproject.toml:version"
]

[tool.isort]
profile = "black"

# Base on vscode-python's Pylint with minimal set of rules.
# https://github.com/microsoft/vscode-python/blob/98d22e7e90fe83548544547df2b7ef693c36f103/src/client/linters/pylint.ts#L57
# https://github.com/janjur/readable-pylint-messages/blob/master/README.md
[tool.pylint.messages_control]
disable = "all"
enable = "C0202,E,F,R0401,W0101,W0109,W0301,W0602,W0612,W0614,W0711,W1302,W1401,W1501"

[tool.pylint.format]
max-line-length = "88"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

