[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
commitizen = "^2.16.0"
pre-commit = "^2.11.1"
pylint = "^2.7.2"
{% if cookiecutter.poetry_source == "douban" %}
[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true
{% elif cookiecutter.poetry_source == "aliyun" %}
[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
{% elif cookiecutter.poetry_source == "163" %}
[[tool.poetry.source]]
name = "163"
url = "https://mirrors.163.com/pypi/simple/"
default = true
{% elif cookiecutter.poetry_source == "tsinghua" %}
[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
{% endif %}
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "{{ cookiecutter.version }}"
tag_format = "$version"
version_files = [
  "pyproject.toml:version"
]

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "all"
enable = "C0202,E,F,R0401,W0101,W0109,W0301,W0602,W0612,W0614,W0711,W1302,W1401,W1501"

[tool.pylint.format]
max-line-length = "88"
